# cpp-minimax-f22

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Design.md  Makefile  README.md  cmake_install.cmake
data/: README.md  performance_results.csv
manual/html/: annotated.html  automatic__player_8h_source.html  base__player_8h_source.html  checkers_8h_source.html  checkers__test_8h_source.html  classes.html  classminimax_1_1core_1_1_automatic_player-members.html  classminimax_1_1core_1_1_automatic_player.html  classminimax_1_1core_1_1_base_player-members.html  classminimax_1_1core_1_1_base_player.html  classminimax_1_1core_1_1_game_state-members.html  classminimax_1_1core_1_1_game_state.html  classminimax_1_1core_1_1_interactive_player-members.html  classminimax_1_1core_1_1_interactive_player.html  classminimax_1_1core_1_1_isolation-members.html  classminimax_1_1core_1_1_isolation.html  classminimax_1_1core_1_1_minimax_solver-members.html  classminimax_1_1core_1_1_minimax_solver.html  classminimax_1_1core_1_1_tictactoe-members.html  classminimax_1_1core_1_1_tictactoe.html  classminimax_1_1core_1_1checkers_1_1_checkers-members.html  classminimax_1_1core_1_1checkers_1_1_checkers.html  dir_02a2e92e9b303d0159c083c137941670.html  dir_0683f3afca2f6b9ef58db3aa169f1308.html  dir_06e6e61da7d3d5dd90dcf0d455670b9a.html  dir_0c4bd23f968a6f2edb715bf7226d5308.html  dir_11a2ffcadbe8b823e01da526c7830045.html  dir_12dc33ebadc216c4eec0709cfa06d74b.html  dir_160689ea5b0122a33ecb18a37bc56c47.html  dir_19dab5509d6044a3b9858b8d83ba15ad.html  dir_1f50c38492fffae9bfd1e13840b60473.html  dir_22fccbf0f40e2f3bcc1c80ce7dbd5d82.html  dir_26699ae77a6410ddd6a0d7285cbdb2b3.html  dir_27f82773dc980fc6c9ebc677788758d3.html  dir_28240d92aa222e669ed306d24ef101c6.html  dir_2e8d223b508d931b8416e784b29cfe2d.html  dir_3042946032d672fb32264554af15906b.html  dir_31fb9e25fdb1fc7cfc82dda24d89218f.html  dir_349bef78921891deb9ed33a3f1bd3e0a.html  dir_3681d3dfec1f60cf52163ef5386db09b.html  (+47 more)
manual/latex/: annotated.tex  automatic__player_8h_source.tex  base__player_8h_source.tex  checkers_8h_source.tex  checkers__test_8h_source.tex  classminimax_1_1core_1_1_automatic_player.eps  classminimax_1_1core_1_1_automatic_player.tex  classminimax_1_1core_1_1_base_player.eps  classminimax_1_1core_1_1_base_player.tex  classminimax_1_1core_1_1_game_state.eps  classminimax_1_1core_1_1_game_state.tex  classminimax_1_1core_1_1_interactive_player.eps  classminimax_1_1core_1_1_interactive_player.tex  classminimax_1_1core_1_1_isolation.eps  classminimax_1_1core_1_1_isolation.tex  classminimax_1_1core_1_1_minimax_solver.tex  classminimax_1_1core_1_1_tictactoe.eps  classminimax_1_1core_1_1_tictactoe.tex  classminimax_1_1core_1_1checkers_1_1_checkers.eps  files.tex  refman.tex  (+12 more)
minimax-lib/: game.cpp  game.h  minimax.cpp  minimax.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/core/: CMakeLists.txt  Makefile  cmake_install.cmake  node.cc  node.h
src/core/games/: checkers.cc  checkers.h  game_state.cc  game_state.h  isolation.cc  isolation.h  tictactoe.cc  tictactoe.h
src/core/players/: automatic_player.cc  automatic_player.h  base_player.cc  base_player.h  checkers_player.cc  checkers_player.h  interactive_isolation_player.cc  interactive_isolation_player.h  interactive_player.cc  interactive_player.h  interactive_tictactoe_player.cc  interactive_tictactoe_player.h
src/core/solver/: minimax_solver.cc  minimax_solver.h
src/games_exe/checkers/: CMakeLists.txt  main.cc
src/games_exe/isolation/: CMakeLists.txt  main.cc
src/games_exe/tictactoe/: CMakeLists.txt  main.cc
src/minimax_exe/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  main.h  minimax_exe
src/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  minimax_tests  tests.cc
src/tests/checkers_tests/: checkers_test.cc  checkers_test.h
src/tests/isolation_tests/: isolation_tests.cc  isolation_tests.h
src/tests/performance/: performance_tests.cc  performance_tests.h
src/tests/tictactoe_tests/: tictactoe_tests.cc  tictactoe_tests.h
tictactoe/: Makefile  tictactoe.cpp
(+20 files in other folders)
